@startuml patron-observer-y-eventos
hide empty members

interface Subject {
  +subscribe(Observer)
}
interface Observer {
  +initialize()
  +begin()
  +end()
  +exit()
  +save()
  +resume()
  +undo()
  +redo()
}
class Board
class LocalGameLogic

Subject <|-- Board
Observer <|.. LocalGameLogic
Board o-> Observer : notifica
LocalGameLogic ..> Board : suscrito a

note bottom of Board
  Observer — transiciones DENTRO
  del mismo turno (intra-module)
end note

class EventManager {
  +subscribe(Class, Listener)
  +publish(Object)
}
class GameEndedEvent {
  +winner: Player
  +history: MoveHistory
}
class LocalGamePlacementController
class EventWiring
class Statistics
class GameHistoryRegistry
class AchievementTracker

LocalGamePlacementController ..> EventManager : publish(GameEndedEvent)
LocalGamePlacementController ..> GameEndedEvent : crea
EventWiring ..> EventManager : subscribe(GameEndedEvent, ...)
EventManager ..> Statistics : notifica
EventManager ..> GameHistoryRegistry : notifica
EventManager ..> AchievementTracker : notifica

note bottom of EventManager
  Event Bus — comunicación ENTRE
  modules que no se conocen (cross-module).
  EventManager sigue siendo Singleton (Enum,
  desde el refactor de 2026-07-10) — decisión
  explícita, no automática (ver
  .agents/steering/05-pattern-gates.md)
end note

note bottom of EventWiring
  wire(Statistics, GameHistoryRegistry,
  AchievementTracker) — las 3 instancias llegan
  inyectadas desde TicTacToeApp.main(), ya no
  se obtienen vía getInstance(). Statistics,
  GameHistoryRegistry y AchievementTracker
  dejaron de ser Singleton en el mismo refactor.
end note
@enduml
